--- a/README.Rmd
+++ b/README.Rmd
@@ -21,16 +21,9 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/JinxuanBian/bis620.2022/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/JinxuanBian/bis620.2022/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-bis620.2022 is a package to plot the time-series data, with basic plot functions and spectral signature calculation as data process. It would be shown with UKBiobank accelerometry data.
+bis620.2022 is a package to examine how would the supplements of Vitamin D or Omega-3 affect the person-year of various types of cancers and cardiovascular, for which person-year is defined as the estimate of the actual time at risk. Additionally, how factors such as BMI and smoking would act in the given experimental trials are also considered.
 
-It could be used for data containing columns named `time` or `freq` and other numeric variable.
-
-Refer to the example data `ukb_accel` for more details.
-
-### build situation overview:
-[test coverage page](https://github.com/JinxuanBian/bis620.2022/blob/main/.github/workflows/test-coverage.yaml)
-
-[lint results](https://github.com/JinxuanBian/bis620.2022/blob/main/.github/workflows/lint.yaml)
+Refer to the example data `vital` for more details.
 
 ## Installation
 
@@ -51,13 +44,12 @@ library(knitr)
 
 ```{r example}
 library(bis620.2022)
-# call of UKBiobank accelerometry data
+# call of vital data
 data(ukb_accel)
-# plots UKBiobank accelerometry data
-ukb_accel[1:1000, ] |> accel_plot()
-# calculate spectral signature by taking the modulus of the
-# Fourier coefficients of the signal
-ukb_accel[1:1000, ] |>
-  spectral_signature(take_log = FALSE) |>
-  accel_plot()
+# plots the histogram of the time at risk of four groups, taking breast cancer as an example
+vital_hist(vital, "brca")
+# plot the scatter plot of the time at risk versus bmi for four groups with the effect of smoking and model with linear regression with linear line and equation shown, taking breast cancer as an example
+vital_model_smoke(vital, "brca")
+# this is for without effect of smoking
+vital_model_nosmoke(vital, "brca")
 ```
